# OGLWrapper

./: CMakeLists.txt  vcpkg.json
extlibs/: type_mapper.hpp
include/OGLWrapper/: Buffer.hpp  Framebuffer.hpp  OpenGLContext.hpp  Program.hpp  Renderbuffer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  gl_constraints.hpp  strict_mode.hpp
include/OGLWrapper/GLFW/: EventArg.hpp  GlfwEvent.hpp  GlfwWindow.hpp  Window.hpp
include/OGLWrapper/Helper/: Camera.hpp  Image.hpp  Mesh.hpp  OrthographicProjection.hpp  PerspectiveProjection.hpp  VertexAttributes.hpp
src/: OpenGLContext.cpp  Program.cpp  Shader.cpp  Texture.cpp
src/GLFW/: GlfwWindow.cpp  Window.cpp
src/Helper/: Camera.cpp  Image.cpp  OrthographicProjection.cpp  PerspectiveProjection.cpp
